--- a/README
+++ b/README
@@ -1,9 +1,20 @@
-Mandelbrot viewer.
+# Mandelbrot viewer.
+> THIS PROGRAM IS DISTRIBUTED WITHOUT ANY WARRANTY
 
-Drag with the mouse to exlore the fractal.
+This program lets you explore the Mandelbrot fractal
+
+## How to use :
+Drag with the mouse to exlore the fractal.<br>
 Use the mouse wheel to zoom in/out.
 
-Keys :
-I -> Increase iterations number
-K -> Decrease iterations number
-P -> Take a screenshot
+### Keys :
+I -> Increase iterations number<br>
+K -> Decrease iterations number<br>
+P -> Take a screenshot<br>
+
+## License :
+> This work is licensed under the Creative Commons Attribution 3.0 unported License.
+> To view a copy of this license, visit http://creativecommons.org/licenses/by/3.0/.
+
+## Author :
+Pierre-Henri Symoneaux
